# pips

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wasm.sh  release.toml
.github/workflows/: cargo-publish.yml  npm-publish.yml  rust-test.yml
pips-next/: next.config.js  now.json  package-lock.json  package.json
pips-next/.next/static/runtime/: main.js  webpack.js  webpack.js.map
pips-next/pages/: about.js  index.js
pips-ng/: angular.json  package-lock.json  package.json  tsconfig.json
pips-ng/e2e/src/: app.e2e-spec.ts
pips-ng/src/: karma.conf.js
pips-ng/src/app/: app.component.spec.ts
pips-react/: package-lock.json  package.json
pips-react/src/: index.js
pips-vue/: README.md  output.js  output2.js  package-lock.json  package.json  vue.config.js
pips-vue/public/: index.html  manifest.json
pips-vue/src/: main.ts
pips-wasm/: Cargo.toml
pips-wasm/src/: lib.rs
pips-web/: .prettierignore  .prettierrc.json  README.md  angular.json  netlify.toml  now.json  package-lock.json  package.json  tsconfig.json
pips-web/e2e/src/: app.e2e-spec.ts
pips-web/src/: index.html  karma.conf.js  styles.scss
pips-web/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  pips.service.spec.ts  pips.service.ts  route-data.model.ts
pips-web/src/app/analyzer/: analyzer.component.html  analyzer.component.spec.ts  analyzer.component.ts
pips-web/src/app/chart/: chart.component.html  chart.component.spec.ts  chart.component.ts
pips-web/src/app/expression/: expression.component.html  expression.component.spec.ts  expression.component.ts
pips-web/src/app/expression-list/: expression-list.component.html  expression-list.component.spec.ts  expression-list.component.ts
pips-web/src/app/visualizer/: visualizer.component.html  visualizer.component.spec.ts  visualizer.component.ts
pips-web/src/environments/: environment.prod.ts  environment.ts
pips-web/src/utilities/: numbers.ts
src/: advantage.rs  color_parser.rs  comparison.rs  constant.rs  die.rs  disadvantage.rs  expression.rs  lib.rs  multiply.rs  operation.rs  operators.rs  parser.rs  sum.rs  traits.rs
src/parser/: base_terms.rs  mod.rs  parser.rs  test_helpers.rs
www/: README.md  index.js  package-lock.json  package.json
