[package]
name = "pips"
version = "0.1.0"
authors = ["Nathan Files <nathanwfiles@gmail.com>"]
edition = "2018"
repository = "https://github.com/nfiles/pips"
keywords = ["dice", "dnd", "statistics"]
categories = ["games", "parser-implementations", "wasm"]
license = "MIT"
description = "Library for analyzing dice roll expressions in TTRPGs"

[dependencies]
nom = "4.2.3"
rand = "0.6.5"
