[package]
name = "pips"
version = "0.2.3-alpha.0"
authors = ["Nathan Files <nathanwfiles@gmail.com>"]
edition = "2018"
repository = "https://github.com/nfiles/pips"
keywords = ["dice", "dnd", "probability", "statistics", "ttrpg"]
categories = ["games", "parser-implementations", "wasm"]
license = "MIT"
description = "Library for analyzing dice roll expressions in TTRPGs"

[workspace]
members = [
    "pips-wasm",
]

[dependencies]
nom = "4.2.3"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
serde = "1.0.90"
serde_derive = "1.0.90"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
