[package]
name = "pips-wasm"
version = "0.2.8"
authors = ["Nathan Files <nathanwfiles@gmail.com>"]
edition = "2018"
repository = "https://github.com/nfiles/pips"
keywords = ["dice", "dnd", "probability", "statistics", "ttrpg"]
categories = ["games", "parser-implementations", "wasm"]
license = "MIT"
description = "WASM bindings for the pips crate"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = "1.0.90"
serde_derive = "1.0.90"
wasm-bindgen = { version = "0.2.43", features = ["serde-serialize"] }

pips = { path = ".." }

# the `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.43"
